2011-10-14  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Do not use OwnFastMallocPtr to manage char*'s.
        https://bugs.webkit.org/show_bug.cgi?id=70106

        Reviewed by Antonio Gomes.

        OwnFastMallocPtr was being used as a smart pointer that automatically called
        free() on the strings returned by the EFL or by ewk.

        However, when WTF is built in release mode, it uses its own memory management
        code instead of using the system malloc(), free() and friends. This means bad
        things will happen when one uses WTF's free() on memory allocated with system
        malloc() by the EFL or ewk.

        The easiest way to solve this is to call free() ourselves.

        * DumpRenderTree/efl/DumpRenderTree.cpp:
        (dumpFramesAsText):
        (getFinalTestURL):

2011-10-14  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Add DumpRenderTreeSupportEfl
        https://bugs.webkit.org/show_bug.cgi?id=68458

        Reviewed by Kenneth Rohde Christiansen.

        Make the calls in DumpRenderTree use DumpRenderTreeSupportEfl.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        (DumpRenderTreeChrome::initialize): Turn on mock scrollbars.
        (DumpRenderTreeChrome::resetDefaultsToConsistentValues):
        (DumpRenderTreeChrome::onWindowObjectCleared):
        (DumpRenderTreeChrome::onDocumentLoadFinished):
        * DumpRenderTree/efl/GCControllerEfl.cpp:
        (GCController::collect):
        (GCController::collectOnAlternateThread):
        (GCController::getJSObjectCount):
        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::counterValueForElementById):
        (LayoutTestController::pageNumberForElementById):
        (LayoutTestController::numberOfPages):
        (LayoutTestController::workerThreadCount):
        (LayoutTestController::findString):
        (LayoutTestController::pauseAnimationAtTimeOnElementWithId):