@@ -1,3 +1,12 @@
+2011-10-14  Csaba Osztrogonác  <ossy@webkit.org>
+
+        new-run-webkit-tests does not support qt-4.8 results
+        https://bugs.webkit.org/show_bug.cgi?id=64071
+
+        Roll-back second part of r97252. :)
+
+        * Scripts/webkitpy/layout_tests/port/qt.py:
+
 2011-10-14  Raphael Kubo da Costa  <kubo@profusion.mobi>
 
         [EFL] DRT: Do not use OwnFastMallocPtr to manage char*'s.
